Fix align, height

--- a/css/styles.css
+++ b/css/styles.css
@@ -326,8 +326,11 @@ img{
     fill: #f4f4fd;
 }
 
-.our-team-list-item:hover .social-links-item-link,
-.our-team-list-item:focus .social-links-item-link { 
+.our-team-list-item:hover .social-links-item-link{
+        background-color: #404bbf;
+}
+
+.our-team-list-item .social-links-item-link:focus { 
     background-color: #404bbf;
 }
 
@@ -396,7 +399,7 @@ img{
     color: #f4f4fd;
     letter-spacing: 0.02em;
     transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), height 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .out-portfolio-list-item:hover .overlay-text,
@@ -439,7 +442,7 @@ img{
 }
 .footer-social-links-list{
     display: flex;
-    align-items: baseline;
+    align-items: center;
     justify-content: flex-start;
     flex-direction: row;
     max-width: 208px;
@@ -454,7 +457,7 @@ img{
    display: flex;
    justify-content: flex-start; 
    flex-direction: row;
-   align-items: flex-start;
+   align-items: baseline;
 }
 
 .social-icon-footer{
